--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
         }
     ],
     "require": {
-        "php": "^8.0.25",
-        "illuminate/database": "~5.5.0|~5.6.0|~5.7.0|~5.8.0|^6.0|^7.0|^8.0"
+        "php": "^8.0.25"
     },
     "autoload": {
         "psr-4": {
